infra/k8s/postgres-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment                                
metadata:
  name: micro-auth-postgres                     
  labels:                                        
    app: micro-auth-postgres
spec:
  selector:
    matchLabels:                                
      app: micro-auth-postgres
      tier: postgres
  replicas: 1
  template:                                     
    metadata:
      labels:                                   
        app: micro-auth-postgres
        tier: postgres
    spec:                                       
      containers:
        - image: postgres:latest                
          name: micro-auth-postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432                    
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/auth
              name: postgres-persistent-storage     
      volumes:                                       
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
  
apiVersion: v1                                      
kind: Service                                        
metadata:
  name: micro-auth-postgres                         
  labels:                                           
    app: micro-auth-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:                                         
    app: micro-auth-postgres
    tier: postgres
