infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-users
  template:
    metadata:
      labels:
        app: micro-users
    spec:
      containers:
        - name: micro-users
          image: nikitkrskrecepies/micro-users
---
apiVersion: v1
kind: Service
metadata:
  name: micro-users-srv
spec:
  selector:
    app: micro-users
  ports:
    - name: micro-users
      protocol: TCP
      port: 3000
      targetPort: 3000
