infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: recepies.dev
      http:
        paths:
          - path: /api/micro_users/?(.*)
            backend:
              serviceName: micro-users-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: micro-front-end-srv
              servicePort: 3000
